--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="UTF-8"/>
       <title>Layout Corporativo</title>
+      <meta name="viewport" content="width=device-width, minimum-scale=1,initial-scale=1"/>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
    </head>
@@ -10,11 +11,11 @@
 <header>
    <div class="header">
       <div class="logo">
-         <div class="logoimg">
-
-         </div>
+         <div class="logoimg"></div>
       </div>
       <div class="menu">
+         <img class="menu-opener" src="assets/images/menu.png"/>
+
          <nav>
             <ul>
                <li class="active"><a href="">Home</a></li>
